:bug: [Tile.css] Fixed tile width on small screen.

--- a/src/styles/components/tile.css
+++ b/src/styles/components/tile.css
@@ -25,7 +25,7 @@
 @media screen and ( max-width: 1000px ) {
 
     .tile{
-        width: 450px;
+        width: 450px !important;
     }
 
     .tile:hover{
